@@ -1,16 +1,23 @@
 package com.zp.module.system.service.dept.impl;
 
+import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.util.ObjectUtil;
+import com.google.common.annotations.VisibleForTesting;
+import com.zp.framework.common.util.object.BeanUtils;
 import com.zp.module.system.controller.admin.dept.dto.DeptListDTO;
 import com.zp.module.system.controller.admin.dept.dto.DeptSaveDTO;
 import com.zp.module.system.dal.dataobject.dept.DeptDO;
+import com.zp.module.system.dao.dept.DeptMapper;
 import com.zp.module.system.service.dept.DeptService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+
+import static com.zp.framework.common.exception.util.ServiceExceptionUtils.exception;
+import static com.zp.framework.common.util.collection.CollectionUtils.convertSet;
+import static com.zp.module.system.enums.ErrorCodeConstants.*;
 
 /**
  * Author : zhengpanone
@@ -22,6 +29,12 @@ import java.util.Set;
 @Validated
 @Slf4j
 public class DeptServiceImpl implements DeptService {
+    private final DeptMapper deptMapper;
+
+    public DeptServiceImpl(DeptMapper deptMapper) {
+        this.deptMapper = deptMapper;
+    }
+
     /**
      * 创建部门
      *
@@ -30,7 +43,16 @@ public class DeptServiceImpl implements DeptService {
      */
     @Override
     public String createDept(DeptSaveDTO createDTO) {
-        return "";
+        if (createDTO.getParentId() == null) {
+            createDTO.setParentId(DeptDO.PARENT_ID_ROOT);
+        }
+        // 校验父部门的有效性
+        validateParentDept(null, createDTO.getParentId());
+        // 校验部门名的唯一性
+        validateDeptNameUnique(null, createDTO.getParentId(), createDTO.getName());
+        DeptDO dept = BeanUtils.toBean(createDTO, DeptDO.class);
+        deptMapper.insert(dept);
+        return dept.getId();
     }
 
     /**
@@ -50,7 +72,14 @@ public class DeptServiceImpl implements DeptService {
      */
     @Override
     public void deleteDept(String id) {
-
+        // 校验部门是否存在
+        validateDeptExists(id);
+        // 校验是否有子部门
+        if (deptMapper.selectCountByParentId(id) > 0) {
+            throw exception(DEPT_EXITS_CHILDREN);
+        }
+        // 删除部门
+        deptMapper.deleteById(id);
     }
 
     /**
@@ -61,7 +90,7 @@ public class DeptServiceImpl implements DeptService {
      */
     @Override
     public DeptDO getDept(String id) {
-        return null;
+        return deptMapper.selectById(id);
     }
 
     /**
@@ -72,7 +101,10 @@ public class DeptServiceImpl implements DeptService {
      */
     @Override
     public List<DeptDO> getDeptList(Collection<String> ids) {
-        return List.of();
+        if (CollUtil.isEmpty(ids)) {
+            return Collections.emptyList();
+        }
+        return deptMapper.selectBatchIds(ids);
     }
 
     /**
@@ -83,7 +115,9 @@ public class DeptServiceImpl implements DeptService {
      */
     @Override
     public List<DeptDO> getDeptList(DeptListDTO dto) {
-        return List.of();
+        List<DeptDO> list = deptMapper.selectList(dto);
+        list.sort(Comparator.comparing(DeptDO::getSort));
+        return list;
     }
 
     /**
@@ -94,7 +128,22 @@ public class DeptServiceImpl implements DeptService {
      */
     @Override
     public List<DeptDO> getChildDeptList(String id) {
-        return List.of();
+        List<DeptDO> children = new LinkedList<>();
+        // 遍历每一层
+        Collection<String> parentIds = Collections.singleton(id);
+        // 使用 Short.MAX_VALUE 避免 bug 场景下，存在死循环
+        for (int i = 0; i < Short.MAX_VALUE; i++) {
+            // 查询当前层，所有的子部门
+            List<DeptDO> deptList = deptMapper.selectListByParentId(parentIds);
+            // 1. 如果没有子部门，则结束遍历
+            if (CollUtil.isEmpty(deptList)) {
+                break;
+            }
+            // 2. 如果有子部门，继续遍历
+            children.addAll(deptList);
+            parentIds = convertSet(deptList, DeptDO::getId);
+        }
+        return children;
     }
 
     /**
@@ -119,4 +168,68 @@ public class DeptServiceImpl implements DeptService {
     public void validateDeptList(Collection<String> ids) {
 
     }
+
+    @VisibleForTesting
+    void validateDeptNameUnique(String id, String parentId, String name) {
+        DeptDO dept = deptMapper.selectByParentIdAndName(parentId, name);
+        if (dept == null) {
+            return;
+        }
+        // 如果 id 为空，说明不用比较是否为相同 id 的部门
+        if (id == null) {
+            throw exception(DEPT_NAME_DUPLICATE);
+        }
+        if (ObjectUtil.notEqual(dept.getId(), id)) {
+            throw exception(DEPT_NAME_DUPLICATE);
+        }
+    }
+
+    @VisibleForTesting
+    void validateParentDept(String id, String parentId) {
+        if (parentId == null || DeptDO.PARENT_ID_ROOT.equals(parentId)) {
+            return;
+        }
+        // 1. 不能设置自己为父部门
+        if (Objects.equals(id, parentId)) {
+            throw exception(DEPT_PARENT_ERROR);
+        }
+        // 2. 父部门不存在
+        DeptDO parentDept = deptMapper.selectById(parentId);
+        if (parentDept == null) {
+            throw exception(DEPT_PARENT_NOT_EXITS);
+        }
+        // 3. 递归校验父部门，如果父部门是自己的子部门，则报错，避免形成环路
+        // id 为空，说明新增，不需要考虑环路
+        if (id == null) {
+            return;
+        }
+        for (int i = 0; i < Short.MAX_VALUE; i++) {
+            // 3.1 校验环路
+            parentId = parentDept.getParentId();
+            if (Objects.equals(id, parentId)) {
+                throw exception(DEPT_PARENT_IS_CHILD);
+            }
+            // 3.2 继续递归下一级父部门
+            if (parentId == null || DeptDO.PARENT_ID_ROOT.equals(parentId)) {
+                break;
+            }
+            parentDept = deptMapper.selectById(parentId);
+            if (parentDept == null) {
+                break;
+            }
+        }
+    }
+
+
+    @VisibleForTesting
+    void validateDeptExists(String id) {
+        if (id == null) {
+            return;
+        }
+        DeptDO dept = deptMapper.selectById(id);
+        if (dept == null) {
+            throw exception(DEPT_NOT_FOUND);
+        }
+    }
+
 }
